数据库表有更新，更新了一些默认值。已完成微服务拆分。其中，对应的商品必须有图片存到image里面。product表的image属性实际无效